--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bigmath",
-  "version": "2.0.0",
+  "version": "1.0.3",
   "description": "arithmetic operators for arbitrary-precision numbers",
   "main": "index.js",
   "scripts": {
     "start": "node-dev example",
-    "test:deps": "dependency-check . && dependency-check . --extra --no-dev -i es2040",
+    "test:deps": "dependency-check . --extra --no-dev -i es2040",
     "test:lint": "standard",
     "test:node": "NODE_ENV=test run-default tape test/*.js --",
     "test:coverage": "NODE_ENV=test nyc npm run test:node",
